--- a/LittmanLibrary/app/src/main/res/navigation/mobile_navigation.xml
+++ b/LittmanLibrary/app/src/main/res/navigation/mobile_navigation.xml
@@ -14,12 +14,12 @@
     <fragment
         android:id="@+id/navigation_dashboard"
         android:name="edu.njit.littmanlibrary.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
+        android:label="@string/title_search"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
         android:id="@+id/navigation_notifications"
         android:name="edu.njit.littmanlibrary.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
+        android:label="@string/title_services"
         tools:layout="@layout/fragment_notifications" />
 </navigation>
